# ui-test-framework

./: .env  .gitignore  README.md  config.py  env.example  index.html  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
4/: index.html
4/export/: influxDbData.txt
5/: index.html
5/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
5/export/: influxDbData.txt  prometheusData.txt
5/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
5/widgets/: categories-trend.json  duration.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
6/: index.html
6/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
6/export/: influxDbData.txt  prometheusData.txt
6/history/: history.json
6/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
7/: index.html
7/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
7/export/: influxDbData.txt  prometheusData.txt
7/history/: history.json  (+1 more)
8/: index.html
components/: __init__.py  base.py
dto/: course_dto.py
elements/: __init__.py  base_element.py  button.py  file_input.py  icon.py  image.py  input.py  link.py  text.py  textarea.py
enums/: __init__.py  page_url.py
fixtures/: browsers.py  pages.py
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: __init__.py  base_page.py
(+148 files in other folders)
