[project]
name = "autotests-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Lev Romanov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-playwright (>=0.7.1,<0.8.0)",
    "pytest-rerunfailures (>=16.0.1,<17.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
